added login and splash

--- a/mbank/src/main/res/layout/login_layout.xml
+++ b/mbank/src/main/res/layout/login_layout.xml
@@ -2,91 +2,140 @@
 
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:layout_width="fill_parent"
     android:orientation="vertical"
-    android:background="#ffffff">
+    android:gravity="center"
+    android:background="@drawable/freee">
 
-    <RelativeLayout
+    <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="100dp"
-        android:background="#333333">
-    </RelativeLayout>
+        android:fillViewport="true"
+        android:layout_height="wrap_content">
 
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_weight="1">
-
-        <RelativeLayout
-            android:layout_width="fill_parent"
+        <LinearLayout
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:orientation="vertical" >
+            android:layout_width="fill_parent"
+            android:orientation="vertical">
 
             <RelativeLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginRight="40dp"
+                android:layout_marginLeft="40dp">
 
-                android:id="@+id/login_layout_login_panel">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/header_text"
+                    android:textColor="#ffffff"
+                    android:textSize="42sp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginLeft="0dp"
+                    android:layout_marginBottom="52dp"
+                    android:text="#SignIn">
+                </TextView>
 
                 <EditText
                     android:layout_width="fill_parent"
-                    android:layout_height="50dp"
-                    android:paddingLeft="10dp"
-                    android:hint="username"
+                    android:layout_height="40dp"
+                    android:paddingLeft="15dp"
+                    android:hint="Username"
+                    android:textSize="16sp"
                     android:singleLine="true"
+                    android:textStyle="bold"
+                    android:textColor="#ffffff"
+                    android:textColorHint="#ffffff"
+                    android:inputType="phone"
+                    android:layout_below="@+id/header_text"
                     android:background="@drawable/username_field_shape"
-                    android:id="@+id/login_layout_username">
-
+                    android:id="@+id/login_username">
                 </EditText>
 
                 <EditText
                     android:layout_width="fill_parent"
-                    android:paddingLeft="10dp"
-                    android:hint="password"
-                    android:layout_height="50dp"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="25dp"
+                    android:paddingLeft="15dp"
+                    android:hint="Password"
+                    android:textSize="16sp"
                     android:singleLine="true"
-                    android:password="true"
-                    android:background="@drawable/password_field_shape"
-                    android:layout_below="@+id/login_layout_username"
-                    android:id="@+id/login_layout_password">
+                    android:textStyle="bold"
+                    android:textColor="#ffffff"
+                    android:textColorHint="#ffffff"
+                    android:inputType="textPassword"
+                    android:layout_below="@+id/login_username"
+                    android:background="@drawable/username_field_shape"
+                    android:id="@+id/login_password">
                 </EditText>
-
             </RelativeLayout>
 
             <RelativeLayout
                 android:layout_width="fill_parent"
                 android:layout_height="50dp"
-                android:orientation="horizontal"
-                android:layout_marginTop="10dp"
-                android:layout_below="@+id/login_layout_login_panel">
+                android:layout_marginTop="25dp"
+                android:orientation="horizontal">
 
                 <RelativeLayout
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginTop="6dp"
-                    android:layout_marginBottom="6dp"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginRight="40dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_centerVertical="true"
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
-                    android:background="@drawable/done_button_selector"
-                    android:clickable="true"
-                    android:layout_weight="1"
-                    android:id="@+id/login_layout_login">
+                    android:background="@drawable/login_button_selector"
+                    android:id="@+id/sign_in_button_panel">
                     <TextView
-                            android:layout_height="wrap_content"
-                            android:layout_width="wrap_content"
-                            android:layout_centerInParent="true"
-                            android:text="Login">
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        android:textColor="#FFF"
+                        android:id="@+id/sign_up_text"
+                        android:text="Sign in">
                     </TextView>
                 </RelativeLayout>
 
             </RelativeLayout>
 
-        </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="fill_parent"
+                android:gravity="center_horizontal"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="40dp"
+                android:layout_marginTop="13dp"
+                android:clickable="true"
+                android:background="@color/transparent"
+                android:layout_gravity="center_horizontal"
+                android:id="@+id/not_registered"
+                android:layout_height="40dp">
+                <TextView
+                    android:id="@+id/link"
+                    android:textColor="#ffc027"
+                    android:textSize="16sp"
+                    android:layout_centerInParent="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Don't have an account?">
+                </TextView>
+                <TextView
+                    android:layout_width="145dp"
+                    android:layout_height="1dp"
+                    android:layout_below="@+id/link"
+                    android:layout_centerHorizontal="true"
+                    android:background="#ffc027">
+                </TextView>
+            </RelativeLayout>
 
-    </RelativeLayout>
+        </LinearLayout>
+
+    </ScrollView>
 
 </LinearLayout>
+
+
+
+
+
