--- a/mbank/src/main/res/drawable/username_field_shape.xml
+++ b/mbank/src/main/res/drawable/username_field_shape.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:shape="rectangle" >
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle" >
 
     <gradient
-            android:startColor="#FFFFFF"
-            android:endColor="#FFFFFF"
-            android:angle="270"/>
+        android:startColor="#40000000"
+        android:endColor="#40000000"
+        android:angle="270"/>
 
-    <corners
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp" />
 
     <stroke android:width="1dip" android:color="#cdcbcb"/>
+
+    <corners
+        android:radius="25dp"/>
 
 </shape>
