--- a/mbank/src/main/res/layout/download_layout.xml
+++ b/mbank/src/main/res/layout/download_layout.xml
@@ -5,13 +5,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical"
-        android:background="#ffffff">
-
-    <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="100dp"
-            android:background="#333333">
-    </RelativeLayout>
+        android:background="@drawable/freee">
 
     <RelativeLayout
             android:layout_width="fill_parent"
@@ -35,7 +29,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:textSize="28dp"
+                    android:textSize="42sp"
                     android:textColor="#4a4a4a"
                     android:id="@+id/download_layout_header_text"
                     android:text="Download">
@@ -49,19 +43,20 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/download_layout_information_text"
                     android:gravity="center"
-                    android:textSize="18dp"
+                    android:textSize="20dp"
                     android:text="Client data need to be have in the system to do transactions">
                 </TextView>
 
                 <TextView
                     android:layout_marginTop="20dp"
-                    android:textColor="#4a4a4a"
+                    android:visibility="gone"
+                    android:textColor="#ffc027"
                     android:id="@+id/download_layout_question_text"
                     android:layout_below="@+id/download_layout_information_text"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:textSize="15dp"
+                    android:textSize="20dp"
                     android:text="Already have downloaded client details Do you want to re-download the data?">
                 </TextView>
 
@@ -81,12 +76,14 @@
                         android:layout_marginBottom="6dp"
                         android:layout_width="fill_parent"
                         android:layout_height="fill_parent"
-                        android:background="@drawable/done_button_selector"
+                        android:background="@drawable/login_button_selector"
                         android:clickable="true"
                         android:id="@+id/download_layout_download">
                     <TextView
                             android:layout_height="wrap_content"
                             android:layout_width="wrap_content"
+                            android:textColor="#ffffff"
+                            android:textStyle="bold"
                             android:layout_centerInParent="true"
                             android:text="Download">
                     </TextView>
@@ -98,6 +95,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="50dp"
                     android:layout_marginTop="5dp"
+                    android:visibility="gone"
                     android:layout_below="@+id/test">
 
                 <RelativeLayout
@@ -107,12 +105,14 @@
                         android:layout_marginBottom="6dp"
                         android:layout_width="fill_parent"
                         android:layout_height="fill_parent"
-                        android:background="@drawable/done_button_selector"
+                        android:background="@drawable/login_button_selector"
                         android:clickable="true"
                         android:id="@+id/download_layout_skip">
                     <TextView
                             android:layout_height="wrap_content"
                             android:layout_width="wrap_content"
+                            android:textColor="#ffffff"
+                            android:textStyle="bold"
                             android:layout_centerInParent="true"
                             android:text="Skip">
                     </TextView>
