--- a/mbank/src/main/res/layout/mobile_bank_layout.xml
+++ b/mbank/src/main/res/layout/mobile_bank_layout.xml
@@ -29,7 +29,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_margin="12dp"
-                android:background="@drawable/transaction1" >
+                android:background="@drawable/login_button_selector" >
             </Button>
         </LinearLayout>
 
