--- a/mbank/src/main/res/layout/attribute_list_row_layout.xml
+++ b/mbank/src/main/res/layout/attribute_list_row_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="horizontal"
+              android:background="#ffffff"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content">
 
@@ -13,18 +14,21 @@
             android:layout_marginTop="12dp"
             android:layout_marginBottom="12dp"
             android:layout_marginRight="15dp"
-            android:layout_height="30dp">
+            android:layout_height="40dp">
 
         <LinearLayout
                 android:layout_height="fill_parent"
                 android:layout_width="fill_parent"
+                android:gravity="center_vertical"
+                android:layout_gravity="center_vertical"
                 android:orientation="horizontal">
 
             <TextView
                     android:id="@+id/child_detail_list_row_attribute_name"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="16dp"
+                    android:textSize="20dp"
+                    android:text="Name"
                     android:layout_weight="1"
                     android:textColor="#4a4a4a"
                     android:layout_gravity="center_vertical">
@@ -33,9 +37,11 @@
             <TextView
                     android:id="@+id/child_detail_list_row_attribute_value"
                     android:layout_width="wrap_content"
+                    android:text="eranga Herath"
                     android:layout_height="fill_parent"
-                    android:textSize="16dp"
+                    android:textSize="20dp"
                     android:textColor="#f79239"
+                    android:gravity="center_vertical"
                     android:layout_gravity="center_vertical">
             </TextView>
 
