--- a/mbank/src/main/res/layout/client_list_row_layout.xml
+++ b/mbank/src/main/res/layout/client_list_row_layout.xml
@@ -1,89 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="horizontal"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
+    android:layout_width="fill_parent"
+    android:background="#ffffff"
+    android:layout_height="80dp">
+
+    <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-
-    <!--<ImageView
-            android:id="@+id/client_list_row_layout_client_icon"
-            android:layout_width="40dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginRight="7dp"
-            android:layout_height="40dp">
-    </ImageView>-->
-
-    <ImageView
-        android:id="@+id/client_list_row_layout_client_icon"
-        android:layout_width="32dp"
-        android:layout_gravity="center_vertical"
-        android:layout_marginTop="17dp"
-        android:layout_marginBottom="17dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="5dp"
-        android:layout_height="32dp">
-    </ImageView>
-
-    <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:paddingLeft="5dp"
-            android:paddingRight="6dp">
-
-        <LinearLayout
-                android:layout_height="fill_parent"
-                android:layout_width="fill_parent"
-                android:orientation="horizontal">
-
+        android:layout_height="fill_parent">
+        <RelativeLayout
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="10dp"
+            android:id="@+id/friend_list_row_layout_user_icon"
+            android:layout_alignParentLeft="true"
+            android:background="@drawable/circle_shape_gray"
+            android:layout_centerVertical="true">
             <TextView
-                    android:id="@+id/client_list_row_layout_client_name"
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
-                    android:textSize="16dp"
-                    android:textColor="#4a4a4a"
-                    android:layout_weight="1">
+                android:id="@+id/icon_text"
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="24sp"
+                android:textColor="#ffffff"
+                android:text="#"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:gravity="center_vertical"
+            android:layout_toRightOf="@+id/friend_list_row_layout_user_icon"
+            android:layout_height="fill_parent">
+            <TextView
+                android:id="@+id/friend_list_row_layout_name"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:gravity="center_vertical"
+                android:layout_marginLeft="5dp"
+                android:textSize="20dp"
+                android:text="Eranga herath             873643030V"
+                android:textColor="#4a4a4a">
             </TextView>
 
             <TextView
-                    android:id="@+id/client_list_row_layout_birth_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="fill_parent"
-                    android:textColor="#4a4a4a"
-                    android:textSize="12dp">
+                android:id="@+id/friend_list_row_layout_account"
+                android:layout_width="wrap_content"
+                android:gravity="center_vertical"
+                android:layout_below="@+id/friend_list_row_layout_name"
+                android:layout_height="30dp"
+                android:layout_marginLeft="5dp"
+                android:textSize="15dp"
+                android:text="345234"
+                android:textColor="#4a4a4a">
             </TextView>
 
-        </LinearLayout>
+        </RelativeLayout>
 
-        <LinearLayout
-                android:layout_height="fill_parent"
-                android:layout_width="fill_parent"
-                android:orientation="horizontal">
 
-            <TextView
-                    android:id="@+id/client_list_row_layout_account_no"
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
-                    android:textSize="12dp"
-                    android:layout_weight="1"
-                    android:textColor="#4a4a4a">
-            </TextView>
-
-            <TextView
-                    android:id="@+id/client_list_row_layout_nic"
-                    android:layout_width="wrap_content"
-                    android:layout_height="fill_parent"
-                    android:textSize="12dp"
-                    android:textColor="#4a4a4a">
-            </TextView>
-
-        </LinearLayout>
-
-    </LinearLayout>
+        <!-- divider -->
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_alignParentBottom="true"
+            android:background="#DADADC" >
+        </View>
+    </RelativeLayout>
 
 </LinearLayout>
