--- a/mbank/src/main/res/layout/transaction_layout.xml
+++ b/mbank/src/main/res/layout/transaction_layout.xml
@@ -208,6 +208,7 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="50dp"
+        android:visibility="gone"
         android:layout_gravity="bottom"
         android:background="#333333" >
 
